# member-id

./: .gitignore  README.md  SECURITY.md  docker-compose.yml  nginx.conf
.github/workflows/: backend-build.yml  backend-ci.yml  codeql.yml  frontend-build.yml  frontend-ci.yml
backend/: .env.local.example  .gitignore  Cargo.toml  README.md  flake.nix
backend/src/: main.rs  passes.rs  utils.rs
frontend/: Caddyfile  Dockerfile  README.md  biome.json  next.config.mjs  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/learn-more/: page.tsx
frontend/components/: camera-selector.tsx  floating-settings-button.tsx  footer.tsx  navbar.tsx  neuland-palm.tsx  qr-reader.tsx  scan-stats-display.tsx  scanner-settings-pane.tsx  theme-provider.tsx  theme-switcher.tsx  theme-toggle.tsx
frontend/components/qr-scanner/: DebugInfo.tsx  InitializingView.tsx  Overlays.tsx  ResultCard.tsx  ScannerUnavailable.tsx  index.tsx
frontend/components/scan-history/: ExportCsvButton.tsx  ScanHistoryItem.tsx  ScanHistoryList.tsx  index.ts  utils.ts
frontend/hooks/: use-scan-history.ts  use-settings.ts
frontend/lib/: date.ts  qr-verifier.ts  sound.ts
