[package]
name = "member-id"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
jsonwebtoken = { version = "^9.3.1" }
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
log = "0.4"
env_logger = "0.10"
serde_json = "1.0.140"
serde_cbor = "0.11"
flate2 = { version = "1.0", features = ["zlib"] }
base45 = "3.1.0"
p256 = { version = "0.14.0-pre.8", features = ["ecdsa"] }
hex = "0.4"
passes = "1.0.1"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
utoipa = { version = "3.3.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["actix-web"] }
actix-governor = "0.8.0"
google-walletobjects1 = "6.0.0"
pem = "3.0.5"
